Preference panel missing translation for tooltip and overlap issue (#2071)
* Missing translation and preference panel overlap issue

* CSS change

--- a/investigate-events/app/styles/investigate-events/components/_investigate-events-table.scss
+++ b/investigate-events/app/styles/investigate-events/components/_investigate-events-table.scss
@@ -29,6 +29,7 @@
       .ember-power-select-trigger {
         // Need to use important to override from-select style.
         border: 1px solid border-color(primary, light) !important;
+        overflow: hidden;
         .ember-power-select-status-icon {
           right: rsa-whitespace(least)
         }
